<resources>
    <string name="app_name">A1.5_Sergio_Ezquerro</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="topping">Topping</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="Subtract">-</string>
    <string name="Quantity_Number">1</string>
    <string name="Add">+</string>
    <string name="order_summary">Order summary</string>
    <string name="order">Order</string>
</resources>